[workspace]
resolver = "2"
members = ["um_crypto/*"]

[package]
name = "uqm_cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "uqm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
umc_qmc = { path = "um_crypto/qmc" }
